--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,31 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+
+    # authentication failure event listener
+#    erp.security.authentication_failure_event_listener:
+#        class: ERP\CRMBundle\Listener\AuthenticationListener
+#        tags:
+#            - { name: kernel.event_listener, event: security.authentication.failure, method: onAuthenticationFailure }
+ 
+    # authentication success event listener
+#    erp.security.interactive_login_listener:
+#        class: ERP\CRMBundle\Listener\AuthenticationListener
+#        tags:
+#            - { name: kernel.event_listener, event: security.interactive_login, method: onAuthenticationSuccess }
+
+    # authentication failure event listener
+#    erp.security.authentication_listener:
+#        class: ERP\CRMBundle\Listener\AuthenticationListener
+#        tags:
+#            - { name: kernel.event_subscriber }   
+#        arguments: ['@doctrine.orm.entity_manager', '@session', '@logger']
+
+    erp.security.authentication_handler:
+            class: ERP\CRMBundle\Listener\AuthenticationHandler
+            public: false
+            arguments:
+                - @service_container
+                - @router
+                - @session
+                - @doctrine.orm.entity_manager                
