--- a/app/config/parametros.yml
+++ b/app/config/parametros.yml
@@ -16,8 +16,11 @@ parameters:
         app.serverMsgDelete: ¡Deleted!
         app.serverError: Error!
         
-
-
+        #loginMessages
+        app.usernameInvalidate: Sorry, your username is not recognized.
+        app.checkCaptcha: Please check the captcha form.
+        app.invalidCaptcha: Invalid captcha.
+        
         #frontend
 
         #form validations
@@ -70,6 +73,9 @@ parameters:
         app.calendarIcon: 4.png
         app.settingsIcon: 5.png
         app.reportsIcon: 6.png
+        
+        #Wizard de configuracion inicial
+        
             
         #tituloPrincipal
         app.tituloHome:  CRM Systems
@@ -125,10 +131,26 @@ parameters:
         app.diasTiempoNotificacion: Days
         app.mesesTiempoNotificacion: Months
         app.aniosTiempoNotificacion: Years
-
-        
+        #Tipo de cuenta (CRUD)
+        app.tituloTipoCuenta: CRM | Account type management
+        app.encabezadoTipoCuenta: Account type
+        app.descripcionTipoCuenta: Add, modify or delete Account type.
+        app.nameTipoCuenta: Name
+        #Fuentes de origen (CRUD)
+        app.tituloFuenteOrigen: CRM | Origin sources management
+        app.encabezadoFuenteOrigen: Origin sources catalog
+        app.descripcionFuenteOrigen: Add, modify or delete origin sources.
+        app.nameFuenteOrigen: Name
+        #Prioridad (CRUD)
+        app.tituloPrioridad: CRM | Priorities management
+        app.encabezadoPrioridad: Priorities catalog
+        app.descripcionPrioridad: Add, modify or delete priorities.
+        app.namePrioridad: Name
        
-        app.tituloLogin: s
+        #Login
+        app.tituloLogin: CRM Systems | Login
+        app.usernameTxt: Username
+        app.passwordTxt: Password
        
         #perfil
         app.perfil: e
