CRUD de tareas (actividades)

--- a/app/config/parametros.yml
+++ b/app/config/parametros.yml
@@ -14,6 +14,8 @@ parameters:
         app.serverMsgSave: ¡Saved!
         app.servermsgupdate: ¡Updated!
         app.serverMsgDelete: ¡Deleted!
+        app.serverMsgCancel: ¡Cancelled!
+        app.serverCancel: already cancelled!
         app.serverError: Error!
         
 
@@ -23,6 +25,16 @@ parameters:
         #form validations
         #requiredFields
         app.requiredFields: ¡Fields in red are required!
+        #remove Labels
+        app.removeLabel: Remove selected rows?
+        #cancel Labels
+        app.cancelLabel: Cancel selected tasks?
+        #cancelButtonText
+        app.cancelButtonText: Cancel
+        #confirmButtonText
+        app.confirmButtonText: Remove
+        #alternateconfirmButtonText
+        app.alternateconfirmButtonText: Continue
         #imageError
         app.imageError: ¡Image too big!
         #select2
@@ -126,6 +138,28 @@ parameters:
         app.mesesTiempoNotificacion: Months
         app.aniosTiempoNotificacion: Years
 
+        #Tareas
+        app.tituloTareas: CRM | Task
+        app.menuTareas: Activities mgmt.
+        app.encabezadoTareas: Notifications
+        app.descripcionTareas: Add, modify or delete tasks.
+        app.nameTareas: Name
+        app.tipoTareas: Task type
+        app.prioridadTareas: Priority
+        app.estadoTareas: Status
+        app.responsableTareas: Director
+        app.recordatorioTareas: Reminders
+        app.fechaInicioTareas: Start date
+        app.fechaFinTareas: End date
+        app.fechaCancelTareas: Cancel date
+        app.estado: Status
+        app.descripcionFormTareas: Description
+        app.prioridadTareas: Priority
+        app.taskNoEdit: can't be modified
+        
+        
+        
+        
         
        
         app.tituloLogin: s
