Tipo de casos y casos

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -455,6 +455,24 @@ twig:
         nameTipoCuenta: '%app.nameTipoCuenta%'
         menuTipoCuenta: '%app.menuTipoCuenta%'
         
+        #Tipo de caso (CRUD)
+        tituloTipoCaso: '%app.tituloTipoCaso%'
+        encabezadoTipoCaso: '%app.encabezadoTipoCaso%'
+        descripcionTipoCaso: '%app.descripcionTipoCaso%'
+        nameTipoCaso: '%app.nameTipoCaso%'
+        menuTipoCaso: '%app.menuTipoCaso%'
+        
+         #caso (CRUD)
+        tituloCaso: '%app.tituloCaso%'
+        encabezadoCaso: '%app.encabezadoCaso%'
+        descripcionCaso: '%app.descripcionCaso%'
+        nameCaso: '%app.nameCaso%'
+        fragmentCaso: '%app.fragmentCaso%'
+        typeCaso: '%app.typeCaso%'
+        PriorityCaso: '%app.PriorityCaso%'
+        userCaso: '%app.userCaso%'
+        menuCaso: '%app.menuCaso%'
+        
         #Fuentes de origen (CRUD)
         tituloFuenteOrigen: '%app.tituloFuenteOrigen%'
         encabezadoFuenteOrigen: '%app.encabezadoFuenteOrigen%'
