Adición de parametros

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -201,6 +201,7 @@ twig:
         
         #Botones - Ingles
         add: '%app.add%'
+        showCancel: '%app.showCancel%'
         addFile: '%app.addFile%'
         loadMoreComments: '%app.loadMoreComments%'
         loadMoreFiles: '%app.loadMoreFiles%'
