--- a/app/config/parametrosEn.yml
+++ b/app/config/parametrosEn.yml
@@ -182,27 +182,28 @@ parameters:
         
         #Campanias
         app.tituloCampania: CRM | Campaigns management
-        app.menuCampania: Campaigns.
+        app.menuCampania: Campaigns
         app.encabezadoCampania: Campaigns list
         app.descripcionCampania: Add, modify or delete campaign.
         app.nameCampania: Name
         
         #TipoCampanias
         app.tituloTipoCampania: CRM | Campaign types management
-        app.menuTipoCampania: Campaign types.
+        app.menuTipoCampania: Campaign types
         app.encabezadoTipoCampania: Campaign types list
         app.descripcionTipoCampania: Add, modify or delete campaign types.
         app.nameTipoCampania: Name
         
         #Nivel de satisfaccion
         app.tituloSatisfaccion: CRM | Level of customer satisfaction
-        app.menuSatisfaccion: Lvl of customer satisfaction.
+        app.menuSatisfaccion: Lvl of customer satisfaction
         app.encabezadoSatisfaccion: Level of customer satisfaction
         app.descripcionSatisfaccion: Add, modify or delete levels of customer satisfaction.
         app.nameSatisfaccion: Name
         
         #Contacto
         app.tituloContacto: Contact
+        app.menuContacto: Contacts
         app.encabezadoContacto: Contact
         app.descripcionContacto: Contact management
         app.tratoContacto: Title
@@ -221,7 +222,7 @@ parameters:
         #Proveedor
         app.tituloProveedor: CRM | Providers
         app.companiaNombreProveedor: Company's name
-        app.menuProveedor: Providers.
+        app.menuProveedor: Providers
         app.encabezadoProveedor: Providers
         app.descripcionProveedor: Add, modify or delete providers.
         app.cuentaProveedor: Account
@@ -244,7 +245,7 @@ parameters:
         #Socio
         app.tituloSocio: CRM | Partners
         app.companiaNombreSocio: Company's name
-        app.menuSocio: Partners.
+        app.menuSocio: Partners
         app.encabezadoSocio: Partners
         app.descripcionSocio: Add, modify or delete partners.
         app.cuentaSocio: Account
@@ -267,7 +268,7 @@ parameters:
         #Accounts
         app.tituloAccount: CRM | Accounts
         app.companiaNombreAccount: Company's name
-        app.menuAccount: Accounts.
+        app.menuAccount: Accounts
         app.encabezadoAccount: Account
         app.descripcionAccount: Add, modify or delete 
         app.cuentaAccount: Company
@@ -289,7 +290,7 @@ parameters:
         
         #Tiempo notificaciones
         app.tituloTiempoNotificacion: CRM | Notification time
-        app.menuTiempoNotificacion: Notif. time.
+        app.menuTiempoNotificacion: Notif. time
         app.encabezadoTiempoNotificacion: Notifications
         app.descripcionTiempoNotificacion: Add, modify or delete time notifications.
         app.nameTiempoNotificacion: Description
@@ -300,10 +301,29 @@ parameters:
         app.mesesTiempoNotificacion: Months
         app.aniosTiempoNotificacion: Years
 
-
+        #Todas las actividades
+        app.tituloTodasActividades: CRM | All the activities
+        app.menuTodasActividades: All
+        app.encabezadoTodasActividades: All the activities
+        app.descripcionTodasActividades: Add, modify or delete any activity.
+        app.nameTodasActividades: Name
+        app.tipoTodasActividades: Type of activity
+        app.prioridadTodasActividades: Priority
+        app.estadoTodasActividades: Status
+        app.responsableTodasActividades: Director
+        app.recordatorioTodasActividades: Reminders
+        app.tiempoRecordatorioTodasActividades: Time
+        app.fechaInicioTodasActividades: Start date
+        app.fechaFinTodasActividades: End date
+        app.fechaCancelTodasActividades: Cancel date
+        app.estadoTodasActividades: Status
+        app.descripcionFormTodasActividades: Description
+        app.prioridadTodasActividades: Priority
+        app.taskNoEditTodasActividades: Can't be modified
+        
         #Tareas
         app.tituloTareas: CRM | Task
-        app.menuTareas: Tasks.
+        app.menuTareas: Tasks
         app.encabezadoTareas: Tasks
         app.descripcionTareas: Add, modify or delete tasks.
         app.nameTareas: Name
@@ -325,7 +345,7 @@ parameters:
 
         #Llamadas
         app.tituloLlamadas: CRM | Calls
-        app.menuLlamadas: Calls.
+        app.menuLlamadas: Calls
         app.encabezadoLlamadas: Calls
         app.descripcionLlamadas: Add, modify or delete calls.
         app.nameLlamadas: Name
@@ -347,7 +367,7 @@ parameters:
         
         #Campania
         app.tituloCampaniaReg: CRM | Campaigns
-        app.menuCampaniaReg: Campaigns.
+        app.menuCampaniaReg: Campaigns
         app.encabezadoCampaniaReg: Campaigns
         app.descripcionCampaniaReg: Add, modify or delete campaigns.
         app.nameCampaniaReg: Name
@@ -371,7 +391,7 @@ parameters:
 
         #Reuniones
         app.tituloReuniones: CRM | Meetings
-        app.menuReuniones: Meetings.
+        app.menuReuniones: Meetings
         app.encabezadoReuniones: Meetings
         app.direccionReuniones: Event's location
         app.descripcionReuniones: Add, modify or delete meetings.
@@ -423,7 +443,7 @@ parameters:
         #Adomon. clientes
         app.tituloCliente: CRM | Clients
         app.companiaNombreCliente: Company's name
-        app.menuCliente: Clients.
+        app.menuCliente: Clients
         app.encabezadoCliente: Clients
         app.descripcionCliente: Add, modify or delete clients.
         app.cuentaCliente: Account
@@ -490,7 +510,7 @@ parameters:
         
         #Oportunidades
         app.tituloOportunidad: CRM | Opportunity management
-        app.menuOportunidad: Opportunities.
+        app.menuOportunidad: Opportunities
         app.encabezadoOportunidad: Opportunities list
         app.descripcionOportunidad: Add, modify or delete opportunity.
         
